# wip

./: meson.build  shell.nix
docs/: Doxyfile  contributors_guide.md  drawable_api.md  hud_and_status_bar.md  music.md
src/audio/: audio.h  midifallback.c  midifallback.h  midifile.c  midifile.h  music.c  music.h
src/libs/: opl.c  opl_internal.h
src/system/: exit.c  sleep.c  sleep.h  system.c  system.h
src/util/: registry.c  registry.h
